site improvements and ensure no XML exploits

--- a/page_src.html
+++ b/page_src.html
@@ -11,12 +11,12 @@
     <base target="_blank">
     <style media="screen" type="text/css">
       body {font-family: "Open Sans", sans-serif;
-              width: 90vw; /*min-width: 600px;*/ margin:auto;}
-      img {max-height:400px; max-width: 40vw;
+              width: 90vw; margin:auto;}
+      img {max-height:400px; max-width: 400px;
               border: 2px solid #ddd; border-radius: 6px;
           }
       .caption {font-size : small; font-weight: bolder;}
-      #postersGoHere, #pamphletsGoHere, #onlinesGoHere {text-align: center;flex-wrap: wrap;display: flex;}
+      #postersGoHere, #pamphletsGoHere, #onlinesGoHere {text-align:center; flex-wrap:wrap; display:flex;}
       #postersGoHere > div, #pamphletsGoHere > div, #onlinesGoHere > div {margin-bottom: 5vw; margin-right: 2vw;}
       hr {color: #0073AE; background-color: #0073AE; border: solid; height: 1vh}
       a {color: #0073AE;}
